# dementia_simulation

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  PERSONA_README.md  README.md  README_evaluator.md  build_index.py  build_index_tfidf.py  demo.py  example.py  example_usage.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_preprocessing.py  run_server.py  search.py  search_tfidf.py  start.sh  test_edge_cases.py  test_evaluator.py  test_persona.py  test_retriever.py  validate_requirements.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: Autofix-on-failed-ci.yml  ci.yml  docs.yml  nightly.yml
backend/: __init__.py  api.py  patient_simulation.py
data/index/: document_index.faiss  embeddings.npy  index_config.json  tfidf_vectorizer.pkl
data/knowledge_base/: dementia_care_guide.md
data/personas/: sample_personas.json
data/processed/: .gitkeep  alzheimers_info.txt  caregiver_support.txt  dementia_overview.txt  document_metadata.json  text_chunks.csv  text_chunks.json
data/uploads/: .gitkeep  dementia_care_guide.txt  sample_patient_data.csv
dementia_simulation/: __init__.py  chat.py  persona.py  retriever.py
docs/: CONTRIBUTING_DOCS.md  PERSONA_STAGE_AFFECT_SAFETY.md  feedback_evaluator.md  index.md
docs/decisions/: ADR-0001-docs-stack.md  index.md
docs/explanation/: architecture.md  data-pipeline.md  evaluation-iteration.md  index.md  personas.md  safety-guardrails.md
docs/how-to/: add-citations.md  add-dataset.md  add-model.md  (+2 more)
embeddings/: documents.pkl  metadata.pkl
examples/: retriever_demo.py
frontend/: README.md  app.py  cli.py  streamlit_app.py
notebooks/: preprocess_docs.ipynb
reports/: quick_metrics.json
scripts/: README.md  checksums.json  fetch_kb.py  kb_manifest.yml  nightly_eval.py  test_manifest.yml
src/: __init__.py  chat.py  evaluator.py  persona.py  rag_pipeline.py  retriever.py  server.py
tests/: __init__.py  conftest.py  test_chat.py  test_persona.py  test_rag_pipeline.py  test_retriever.py
(+72 files in other folders)
