[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dementia-simulation"
version = "0.1.0"
description = "A chatbot simulation for dementia patients to help caregivers practice empathetic communication"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yan Rui", email = "mrlyrplease@example.com" }]

# Keep ALL project-level keys before opening [project.scripts]
# PEP 621: dependencies is an array of PEP 508 strings.
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn>=0.24.0",
  "streamlit>=1.28.1",
  "click>=8.1.7",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.2.2",
  # in [project] dependencies list
  "transformers>=4.35,<4.57",
  "torch>=2.1.1",
  "pydantic>=2.5.0",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",
  "numpy>=1.24.3",
  "pandas>=2.1.3",
  "scikit-learn>=1.3.2",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.0",
  "httpx>=0.25.2",
  "PyPDF2>=3.0.0",
  "nltk>=3.8.1",
  "tqdm>=4.66.0",
  "plotly (>=6.3.1,<7.0.0)",
]

[project.scripts]
dementia-sim = "dementia_simulation.cli.main:cli"

[tool.poetry]
# Explicit src/ layout mapping
package-mode = true
packages = [{ include = "dementia_simulation", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
ruff = "^0.5.5"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "B"]
ignore = ["B008"]  # Allow function calls in default arguments (FastAPI Depends pattern)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
